<resources>

    <!--App info-->
    <string name="app_name">Burger Boy</string>
    <string name="content_description">Burger Boy order screen</string>

    <!--Burger Boy title text-->
    <string name="burger_boy_order_text">BURGER BOY ORDER SCREEN</string>
    <string name="burger_boy_order_statement">What would you like on your burger?</string>
    <string name="burger_boy_toppings">ALL TOPPINGS ARE FREE</string>

    <!--Burger Boy meat selection-->
    <string name="burger_boy_beef">Beef</string>
    <string name="burger_boy_chicken">Chicken</string>
    <string name="burger_boy_lamb">Lamb</string>
    <string name="burger_boy_pork">Pork</string>
    <string name="burger_boy_bean_patty">Bean Patty (Ve)</string>

    <!--Burger Boy toppings-->
    <string name="topping_mayo">Mayo</string>
    <string name="topping_lettuce">Lettuce</string>
    <string name="topping_pickles">Pickles</string>
    <string name="topping_tomatoes">Tomatoes</string>
    <string name="topping_onions">Onions</string>
    <string name="topping_cheese">Cheese</string>
    <string name="topping_bbq">BBQ</string>
    <string name="topping_ketchup">Ketchup</string>
    <string name="topping_mustard">Mustard</string>

    <string name="burger_boy_order">ORDER</string>

</resources>